<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eaeaea">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Calculate GCD of two numbers"
        android:layout_margin="10sp"
        android:padding="10sp"
        android:textColor="#0e0e0e"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/ButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="2">

            <EditText
                android:id="@+id/et_num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/enter_number_one"
                android:inputType="number"
                android:layout_margin="10sp"
                android:padding="10sp"
                android:textColor="#0e0e0e"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_num2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/enter_number_two"
                android:inputType="number"
                android:layout_margin="10sp"
                android:textColor="#0e0e0e"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_gcd_calc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:text="@string/get_gcd"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_next_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="#515151"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>