<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eaeaea"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10sp"
        android:padding="10sp"
        android:text="Display Hashcode"
        android:textColor="#0e0e0e"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="3">

            <EditText
                android:id="@+id/et_num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/node_one"
                android:padding="10sp"
                android:textColor="#0e0e0e"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_num2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/node_two"
                android:textColor="#0e0e0e"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_num3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/node_three"
                android:textColor="#0e0e0e"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="3">

            <TextView
                android:id="@+id/tv_hash1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="Hash One"
                android:padding="10sp"
                android:textColor="#0e0e0e"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_hash2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/hash_two"
                android:textColor="#0e0e0e"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_hash3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="Hash Three"
                android:textColor="#0e0e0e"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_hash_calc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:text="Get Hash"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>